# Enterprise-FastAPI-Platform

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  logging_config.json  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  users.py
app/core/: config.py  events.py  security.py
app/crud/: user.py
app/db/: session.py
app/models/: user.py
app/schemas/: token.py  user.py
app/services/: user_service.py
app/utils/: email.py
tests/: conftest.py
tests/test_api/: test_auth.py  test_users.py
